--- a/models/my_frcnn_resnet50_v1/pipeline.config
+++ b/models/my_frcnn_resnet50_v1/pipeline.config
@@ -7,7 +7,7 @@
 
 model {
   faster_rcnn {
-    num_classes: 2
+    num_classes: 1
     image_resizer {
       keep_aspect_ratio_resizer {
         min_dimension: 640
@@ -51,7 +51,7 @@ model {
     second_stage_box_predictor {
       mask_rcnn_box_predictor {
         use_dropout: false
-        dropout_keep_probability: 1.0
+        dropout_keep_probability: 0.6
         fc_hyperparams {
           op: FC
           regularizer {
@@ -74,8 +74,8 @@ model {
       batch_non_max_suppression {
         score_threshold: 0.0
         iou_threshold: 0.6
-        max_detections_per_class: 100
-        max_total_detections: 300
+        max_detections_per_class: 1
+        max_total_detections: 1
       }
       score_converter: SOFTMAX
     }
@@ -94,38 +94,46 @@ train_config: {
   sync_replicas: true
   startup_delay_steps: 0
   replicas_to_aggregate: 8
-  num_steps: 25000
+  num_steps: 10000
   optimizer {
-    momentum_optimizer: {
+    adam_optimizer: {
       learning_rate: {
-        cosine_decay_learning_rate {
-          learning_rate_base: .04
-          total_steps: 25000
-          warmup_learning_rate: .013333
-          warmup_steps: 2000
+        manual_step_learning_rate {
+          initial_learning_rate: .0002
+          schedule {
+            step: 2000
+            learning_rate: .0001
+          }
+          schedule {
+            step: 5500
+            learning_rate: .00008
+          }
+          schedule {
+            step: 7500
+            learning_rate: .00004
+          }
         }
       }
-      momentum_optimizer_value: 0.9
     }
     use_moving_average: false
   }
   fine_tune_checkpoint_version: V2
-  fine_tune_checkpoint: "pre_trained_models/faster_rcnn_resnet50_v1_640x640_coco17_tpu-8/checkpoint/ckpt-0" # Path to checkpoint of pre-trained model
+  fine_tune_checkpoint: "pre_trained_models/faster_rcnn_resnet50_v1_640x640_coco17_tpu-8/checkpoint/ckpt-0"
   fine_tune_checkpoint_type: "detection"
   data_augmentation_options {
     random_horizontal_flip {
     }
   }
 
-  max_number_of_boxes: 100
+  max_number_of_boxes: 1
   unpad_groundtruth_tensors: false
   use_bfloat16: false  # works only on TPUs
 }
 
 train_input_reader: {
-  label_map_path: "annotations/label_map.pbtxt" # Path to label map file
+  label_map_path: "annotations/label_map.pbtxt"
   tf_record_input_reader {
-    input_path: "annotations/1_342_train.tfrecord" # Path to training TFRecord file
+    input_path: "annotations/1_342_train.tfrecord"
   }
 }
 
@@ -136,7 +144,7 @@ eval_config: {
 }
 
 eval_input_reader: {
-  label_map_path: "annotations/label_map.pbtxt" # Path to label map file
+  label_map_path: "annotations/label_map.pbtxt"
   shuffle: false
   num_epochs: 1
   tf_record_input_reader {
