--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 .idea
 
 images
+images/icdar_2013_images
+
 models/my_frcnn_resnet50_v1/train
 models/my_frcnn_resnet50_v1/checkpoint
 models/my_frcnn_resnet50_v1/ckpt*
+
+models/my_frcnn_resnet50_v1_text_detector/train
+models/my_frcnn_resnet50_v1_text_detector/checkpoint
+models/my_frcnn_resnet50_v1_text_detector/ckpt*
+
 pre_trained_models
 annotations
 exported-models
+
+.ipynb_checkpoints
